// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSelectableChip should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default custom-class"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="default" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="default" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="default" and a trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="default" and both a leading and trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="default" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default bpk-chip--disabled bpk-chip--default-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="default" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--default bpk-chip--default-selected"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="default", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--default bpk-chip--disabled bpk-chip--default-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onDark" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-dark"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onDark" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-dark"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onDark" and a trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-dark"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onDark" and both a leading and trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-dark"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onDark" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-dark bpk-chip--disabled bpk-chip--on-dark-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onDark" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--on-dark bpk-chip--on-dark-selected"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onDark", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--on-dark bpk-chip--disabled bpk-chip--on-dark-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onImage" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-image"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onImage" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-image"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onImage" and a trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-image"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onImage" and both a leading and trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-image"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onImage" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-image bpk-chip--disabled bpk-chip--on-image-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onImage" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--on-image bpk-chip--on-image-selected"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="onImage", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--on-image bpk-chip--disabled bpk-chip--on-image-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;
